# xfce4-whiskermenu-plugin

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CREDITS  INSTALL  NEWS  README  meson.build  meson_options.txt  update-po.sh  whiskermenu.desktop  xfce4-popup-whiskermenu.in
cmake/: AddVersionCompileDefinition.cmake  uninstall.cmake.in
icons/: CMakeLists.txt  meson.build
panel-plugin/: CMakeLists.txt  applications-page.cpp  applications-page.h  category-button.cpp  category-button.h  category.cpp  category.h  command-button.cpp  command-button.h  command-edit.cpp  command-edit.h  command.cpp  command.h  configuration-dialog.cpp  configuration-dialog.h  element.cpp  element.h  favorites-page.cpp  favorites-page.h  icon-renderer.cpp  icon-renderer.h  icon-size.cpp  icon-size.h  image-menu-item.h  launcher-icon-view.cpp  launcher-icon-view.h  launcher-model.cpp  launcher-model.h  launcher-tree-view.cpp  launcher-tree-view.h  launcher-view.cpp  launcher-view.h  launcher.cpp  launcher.h  list-page.cpp  list-page.h  meson.build  page.cpp  page.h  plugin.cpp  (+37 more)
po/: CMakeLists.txt  LINGUAS  POTFILES  am.po  ar.po  ast.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  meson.build  ms.po  nb.po  (+23 more)
po/ar/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ast/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/bg/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ca/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/cs/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/da/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/de/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/el/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/en_GB/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/es/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/et/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/fa/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/fi/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/fr/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/he/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/hr/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/hu/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/id/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/it/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ja/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/kk/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ms/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/nb/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ne/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/nl/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/pl/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/pt/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/pt_BR/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ro/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/ru/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/sk/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/sr@latin/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/sv/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/tr/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/uk/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/uz/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/vi/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
po/zh_TW/: CMakeLists.txt  xfce4-whiskermenu-plugin.po
src/: CMakeLists.txt  applications_page.cpp  applications_page.hpp  category.cpp  category.hpp  command_button.cpp  command_button.hpp  configuration_dialog.cpp  configuration_dialog.hpp  element.hpp  favorites_page.cpp  favorites_page.hpp  filter_page.cpp  filter_page.hpp  icon_size.cpp  icon_size.hpp  launcher.cpp  launcher.hpp  launcher_model.cpp  launcher_model.hpp  launcher_view.cpp  launcher_view.hpp  list_page.cpp  list_page.hpp  menu.cpp  menu.hpp  page.cpp  page.hpp  panel_plugin.cpp  panel_plugin.hpp  plugin.cpp  plugin.hpp  query.cpp  query.hpp  recent_page.cpp  recent_page.hpp  register_plugin.c  resizer_widget.cpp  resizer_widget.hpp  search_page.cpp  (+6 more)
