set(ICON_INSTALL_DIR ${DATA_INSTALL_DIR}/icons)

install(FILES hi16-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/16x16/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi22-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/22x22/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi24-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/24x24/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi32-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/32x32/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi48-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/48x48/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi64-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/64x64/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi128-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/128x128/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hi256-app-whiskermenu.png
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/256x256/apps
        RENAME xfce4-whiskermenu.png)

install(FILES hisc-app-whiskermenu.svg
        DESTINATION ${ICON_INSTALL_DIR}/hicolor/scalable/apps
        RENAME xfce4-whiskermenu.svg)
