find_package(Gettext REQUIRED)

add_subdirectory(ar)
add_subdirectory(ast)
add_subdirectory(bg)
add_subdirectory(ca)
add_subdirectory(cs)
add_subdirectory(da)
add_subdirectory(de)
add_subdirectory(el)
add_subdirectory(en_GB)
add_subdirectory(es)
add_subdirectory(et)
add_subdirectory(fa)
add_subdirectory(fi)
add_subdirectory(fr)
add_subdirectory(he)
add_subdirectory(hr)
add_subdirectory(hu)
add_subdirectory(id)
add_subdirectory(it)
add_subdirectory(ja)
add_subdirectory(kk)
add_subdirectory(ms)
add_subdirectory(nb)
add_subdirectory(ne)
add_subdirectory(nl)
add_subdirectory(pl)
add_subdirectory(pt)
add_subdirectory(pt_BR)
add_subdirectory(ro)
add_subdirectory(ru)
add_subdirectory(sk)
add_subdirectory(sr@latin)
add_subdirectory(sv)
add_subdirectory(tr)
add_subdirectory(uk)
add_subdirectory(uz)
add_subdirectory(vi)
add_subdirectory(zh_TW)
